utility-apps/monitoring/opensearch/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch-logs
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: [logs.internal.api-api-api.com]
  rules:
    - backendRefs:
        - name: opensearch-logs-dashboards
          port: 5601
