utility-apps/monitoring/opensearch/templates/cluster.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-logs
spec:
  podSelector:
    matchLabels:
      opensearch.org/opensearch-cluster: opensearch-logs
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 9200}
    - from:
        - podSelector:
            matchLabels:
              opensearch.org/opensearch-cluster: opensearch-logs
      ports:
        - {protocol: TCP, port: 9300}
